--- a/about/index.html
+++ b/about/index.html
@@ -96,7 +96,7 @@
 </header>
 	<div class="article-content">
 		
-		<center><br><img src="http://7xiur2.com1.z0.glb.clouddn.com/%E5%A5%8B%E6%96%97%E4%B9%8B%E8%B7%AF%E5%88%98%E5%85%B4Star%E5%85%88%E7%94%9F%E6%88%90%E9%95%BF%E5%8F%B2.png" alt="奋斗之路"><br></center><br><center><br><br><img src="http://7xiur2.com1.z0.glb.clouddn.com/663100258572558405.jpg" alt="个人公众号"><br></center>
+		<center><br><img src="http://7xiur2.com1.z0.glb.clouddn.com/star.png" alt="奋斗之路"><br></center><br><center><br><br><img src="http://7xiur2.com1.z0.glb.clouddn.com/663100258572558405.jpg" alt="个人公众号"><br></center>
 
 
 <p><strong>友情链接</strong></p>
